Finish setting up shadcn. Made rough sidebar component in the layout.

--- a/mach-gui/tsconfig.app.json
+++ b/mach-gui/tsconfig.app.json
@@ -20,7 +20,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
-    // Added for ShadCN
+    // added for shadcn
+    // https://ui.shadcn.com/docs/installation/vite
     "baseUrl": ".",
     "paths": {
       "@/*": [
